--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "wix-eventually": "^2.2.0"
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -35,6 +34,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4"
   }
 }
