--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "nock": "^11.7.0",
+    "node-fetch": "^2.6.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
