--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "embla-carousel-react": "^1.2.5",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
+    "path-to-regexp": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   }
 }
