--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jest": "^24.9.0",
     "nock": "^11.7.0",
     "node-fetch": "^2.6.0",
+    "react-svg-loader": "^3.0.3",
     "style-loader": "^1.0.0",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
